More algoritms, more predicts

--- a/0 Random.ipynb
+++ b/0 Random.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = {'_ID_': range(4166), '_VAL_': np.random.randint(0,2,4166)}"
@@ -101,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.to_csv('submit.csv', index=False)"
@@ -110,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
